--- a/package.json
+++ b/package.json
@@ -3,9 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^2.12.4",
+    "material-ui": "^0.18.7",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-scripts": "1.0.10"
+    "react-scripts": "1.0.10",
+    "react-weui": "^1.1.3",
+    "weui": "^1.1.0",
+    "react-router": "^4.1.1",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.5",
+    "fastclick": "^1.0.6",
+    "babel-polyfill": "^6.16.0",
+    "react-router-dom": "^4.1.1",
+    "react-transition-group": "^2.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
